# ByteTube

./: .gitignore  README.md
bytetube-backend/: Cargo.toml  Dockerfile
bytetube-backend/src/: chat.rs  main.rs  video_stream.rs
bytetube-frontend/: README.md  package.json
bytetube-frontend/app/: globals.css  layout.tsx  page.tsx  providers.tsx
bytetube-frontend/app/about/: page.tsx
bytetube-frontend/app/privacy/: page.tsx
bytetube-frontend/app/terms/: page.tsx
bytetube-frontend/app/video/[id]/: page.tsx
bytetube-frontend/components/chat/: ChatMessage.tsx  ChatSidebar.tsx
bytetube-frontend/components/layout/: Footer.tsx  Header.tsx  Layout.tsx
bytetube-frontend/components/ui/: ErrorScreen.tsx  LoadingScreen.tsx  toaster.tsx
bytetube-frontend/components/video/: VideoControls.tsx  VideoPlayer.tsx  VideoProgress.tsx  VideoSettings.tsx
bytetube-frontend/hooks/: use-toast.ts  useVideoPlayer.ts
