[package]
name = "bytetube-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["full"] }
mime_guess = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
actix = "0.13.5"
thiserror = "2.0.12"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-actix-web = "0.7"
actix-web-actors = "4"
env_logger = "0.11.8"
actix-broker = "0.4.0-beta.1"
futures = "0.3"
chrono = "0.4.40"
