[package]
name = "bytetube-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
actix = "0.13.5"
thiserror = "2.0.12"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-actix-web = "0.7"
actix-web-actors = "4"
reqwest = "0.12.15"
chrono = "0.4.40"
